tests/fail/02-theme.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `abc`
 --> tests/fail/02-theme.rs:2:10
  |
2 | #[derive(Asker)]
  |          ^^^^^ use of undeclared crate or module `abc`
  |
  = note: this error originates in the derive macro `Asker` (in Nightly builds, run with -Z macro-backtrace for more info)
